custom.css
/*CineSuntStyles*/


/*CeAmFacutHover*/
.fullGallery img, .frontGallery img {
transition: all .2s ease-in-out;
}
.fullGallery img:hover, .frontGallery img:hover{
transform: scale(1.5);
}
/*MenuThickness*/
.site-logo{
max-height: 250px;
position: fixed;
left: 20px;
}
/*MenuColor*/
#mainnav ul li a{
color: black;
font-size: 20px;
font-family: 'Kaushan Script', cursive;
}
/*Text-slider styles*/
.text-slider .maintitle, .text-slider .subtitle{
text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

